--- a/views/addInfo.hbs
+++ b/views/addInfo.hbs
@@ -10,8 +10,20 @@
     </div>
     <div class="row">
         <div class="input-field col s12">
-          <label for="price">Price</label>
+          <label for="text">Text</label>
           <textarea id="text" class="materialize-textarea" name='text' type='text'></textarea>
+        </div>
+    </div>
+    <div class="row">
+        <div class="input-field col s12">
+          <label for="text">Author</label>
+          <textarea id="text" class="materialize-textarea" name='author' type='text'></textarea>
+        </div>
+    </div>
+    <div class="row">
+        <div class="input-field col s12">
+          <label for="text">Date</label>
+          <textarea id="text" class="materialize-textarea" name='date' type='text'></textarea>
         </div>
     </div>
     <button type="submit" class='btn'>Add Article</button>
