--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -2,11 +2,10 @@
 
 <div class="blogContainer">
     
-        {{#if articles.length}}
+        {{#if articles}}
         <div class="collection">
             {{#each articles}}
-
-                <a href="/blog/{{id}}" class="collection-item question">{{title}}</a>
+                <a href="/blog/{{_id}}" class="collection-item question">{{title}}</a> 
             {{/each}}
         </div>
         {{else}}
