--- a/views/article.hbs
+++ b/views/article.hbs
@@ -1,3 +1,9 @@
 <h1>{{i.title}}</h1>
 
-<H5> {{i.text}}</H5>
+<H3> {{i.text}}</H3>
+
+<h5>{{i.author}}</h5>
+
+<h6>{{i.date}}</h6>
+
+<a href="/blog/{{i.id}}/edit"> Edit</a>
